# CowakaClaw

./: README.md  agent_loop.py  pyproject.toml
src/: __init__.py  main.py  utils.py
src/agent/: __init__.py  agent.py  prompts.py
src/cron/: __init__.py  manager.py
src/mcp/: __init__.py  client.py  manager.py
src/memory/: __init__.py  memory.py
src/session/: session.py
src/ui/: __init__.py  base.py  cli.py  openai_api_chat_completions.py  openai_api_responses.py  slack.py  textual_ui.py
tests/: test_cron_manager.py  test_memory.py  test_session.py  test_ui_cli.py  test_ui_openai_api_chat_completions.py  test_ui_openai_api_responses.py  test_ui_slack.py
