[project]
name = "cowaka-claw"
version = "0.1.0"
description = "AI agent with MCP support, session management, and cron scheduling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
slack = ["slack-bolt", "aiohttp"]
api = ["fastapi", "uvicorn"]
all = ["cowaka-claw[slack,api]"]
dev = ["ruff", "pytest", "pytest-asyncio"]

[project.scripts]
cowaka-claw = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
